--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <link rel="stylesheet" href="styles.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700;800&display=swap" rel="stylesheet">
 </head>
 <body>
     <!-- Navigation -->
@@ -24,13 +24,13 @@
                 </button>
                 <ul class="nav-menu" id="navMenu">
                     <li><a href="#inicio">Inicio</a></li>
-                    <li><a href="#quienes-somos">Quiénes Somos</a></li>
+                    <li><a href="#quienes-somos">Nosotros</a></li>
                     <li><a href="#servicios">Servicios</a></li>
-                    <li><a href="#incluye">Lo que Incluye</a></li>
-                    <li><a href="#por-que">Por Qué Elegirnos</a></li>
+                    <li><a href="#incluye">Incluye</a></li>
+                    <li><a href="#por-que">Por Qué</a></li>
                     <li><a href="#testimonios">Testimonios</a></li>
                     <li><a href="#faq">FAQ</a></li>
-                    <li><a href="#contacto" class="btn-nav">Contacto</a></li>
+                    <li><a href="https://calendly.com/finanzascam-news/30min" target="_blank" class="btn-nav">Agendar Llamada</a></li>
                 </ul>
             </div>
         </div>
@@ -38,14 +38,20 @@
 
     <!-- Hero Section -->
     <section id="inicio" class="hero">
-        <div class="hero-overlay"></div>
         <div class="container">
             <div class="hero-content">
-                <img src="logo.png" alt="Finanzas CAM" class="logo-hero">
-                <h1 class="hero-title">Finanzas CAM – Tu club privado de inversión en México</h1>
-                <p class="hero-subtitle">Te damos las herramientas y el apoyo humano que necesitas para invertir con confianza y tranquilidad</p>
-                <a href="https://calendly.com/finanzascam-news/30min" target="_blank" class="btn-primary">Agenda tu diagnóstico gratuito de 30 min</a>
-                <p class="hero-note">Solo 15 plazas founding member a $997 USD (después $1.497)</p>
+                <div class="hero-logo-wrapper">
+                    <img src="logo.png" alt="Finanzas CAM" class="logo-hero">
+                </div>
+                <h1 class="hero-title">Tu club privado de inversión en México</h1>
+                <p class="hero-subtitle">Herramientas y apoyo humano para invertir con confianza</p>
+                <div class="hero-cta">
+                    <a href="https://calendly.com/finanzascam-news/30min" target="_blank" class="btn-calendly-large">
+                        <span class="btn-icon">📅</span>
+                        <span>Agenda tu diagnóstico gratuito de 30 min</span>
+                    </a>
+                    <p class="hero-note">Solo 15 plazas founding member a $997 USD (después $1.497)</p>
+                </div>
             </div>
         </div>
     </section>
@@ -53,11 +59,13 @@
     <!-- Quiénes Somos -->
     <section id="quienes-somos" class="section">
         <div class="container">
-            <h2 class="section-title">Quiénes Somos</h2>
-            <div class="content-box">
-                <p class="lead-text">Somos Finanzas CAM, tu puente directo y humano a las mejores oportunidades de inversión.</p>
-                <p>Como un club privado, combinamos la seguridad de productos regulados (como Allianz OptiMaxx, oro físico y NASDAQ) con la emoción de inversiones activas (acciones USA y criptos).</p>
-                <p>Te tratamos como familia: te explicamos todo paso a paso, sin jerga complicada, para que te sientas en casa y veas crecer tu dinero.</p>
+            <div class="bubble-card">
+                <h2 class="section-title">Quiénes Somos</h2>
+                <div class="content-text">
+                    <p class="lead-text">Somos Finanzas CAM, tu puente directo y humano a las mejores oportunidades de inversión.</p>
+                    <p>Como un club privado, combinamos la seguridad de productos regulados (como Allianz OptiMaxx, oro físico y NASDAQ) con la emoción de inversiones activas (acciones USA y criptos).</p>
+                    <p>Te tratamos como familia: te explicamos todo paso a paso, sin jerga complicada, para que te sientas en casa y veas crecer tu dinero.</p>
+                </div>
             </div>
         </div>
     </section>
@@ -68,7 +76,7 @@
             <h2 class="section-title">Nuestros Servicios</h2>
             <div class="services-grid">
                 <!-- Servicio 1: Inversión Pasiva -->
-                <div class="service-card">
+                <div class="service-bubble">
                     <div class="service-header">
                         <h3>Inversión Pasiva</h3>
                         <div class="price">$800 USD/año</div>
@@ -83,7 +91,7 @@
                 </div>
 
                 <!-- Servicio 2: Inversión Activa + Toolbox -->
-                <div class="service-card featured">
+                <div class="service-bubble featured">
                     <div class="badge">Más Popular</div>
                     <div class="service-header">
                         <h3>Inversión Activa + Toolbox</h3>
@@ -105,7 +113,7 @@
                     </ul>
                 </div>
             </div>
-            <div class="how-it-works">
+            <div class="how-it-works-bubble">
                 <h3>¿Cómo Funciona?</h3>
                 <p>Empezamos con una llamada gratis para entender tu situación, te configuramos todo y te acompañamos mes a mes para que inviertas sin estrés.</p>
             </div>
@@ -118,42 +126,42 @@
             <h2 class="section-title">Lo que Incluye</h2>
             <p class="section-intro">Imagina tener todo en un solo lugar, con nosotros actualizando tus herramientas cada año para que estés siempre al día.</p>
             <div class="includes-grid">
-                <div class="include-item">
+                <div class="include-bubble">
                     <div class="include-icon">📧</div>
                     <h4>Newsletters Semanales</h4>
                     <p>52 newsletters personalizadas con análisis y oportunidades</p>
                 </div>
-                <div class="include-item">
+                <div class="include-bubble">
                     <div class="include-icon">🎯</div>
                     <h4>Picks Exclusivos</h4>
                     <p>Recomendaciones de inversión activa seleccionadas para ti</p>
                 </div>
-                <div class="include-item">
+                <div class="include-bubble">
                     <div class="include-icon">📊</div>
                     <h4>Plantillas Profesionales</h4>
                     <p>Presupuesto, tracker de inversiones, deudas y patrimonio neto</p>
                 </div>
-                <div class="include-item">
+                <div class="include-bubble">
                     <div class="include-icon">🤝</div>
                     <h4>Onboarding Extendido</h4>
                     <p>Configuración personalizada con acompañamiento humano</p>
                 </div>
-                <div class="include-item">
+                <div class="include-bubble">
                     <div class="include-icon">📈</div>
                     <h4>Seguimiento Mensual</h4>
                     <p>Los primeros 3 meses con revisión y ajustes</p>
                 </div>
-                <div class="include-item">
+                <div class="include-bubble">
                     <div class="include-icon">🔄</div>
                     <h4>Actualizaciones Anuales</h4>
                     <p>Tus herramientas siempre actualizadas y mejoradas</p>
                 </div>
-                <div class="include-item">
+                <div class="include-bubble">
                     <div class="include-icon">👥</div>
                     <h4>Comunidad VIP</h4>
                     <p>Acceso a grupo exclusivo de miembros</p>
                 </div>
-                <div class="include-item">
+                <div class="include-bubble">
                     <div class="include-icon">💬</div>
                     <h4>Soporte Personalizado</h4>
                     <p>WhatsApp y email para resolver tus dudas</p>
@@ -167,22 +175,22 @@
         <div class="container">
             <h2 class="section-title">Por Qué Elegirnos</h2>
             <div class="why-grid">
-                <div class="why-item">
+                <div class="why-bubble">
                     <div class="why-icon">🏠</div>
                     <h4>Te sientes en casa</h4>
                     <p>Nuestro tono humano y transparente hace que te sientas parte de la familia</p>
                 </div>
-                <div class="why-item">
+                <div class="why-bubble">
                     <div class="why-icon">🎁</div>
                     <h4>Único en el mercado</h4>
                     <p>Nadie más te da picks personalizados + plantillas listas para usar</p>
                 </div>
-                <div class="why-item">
+                <div class="why-bubble">
                     <div class="why-icon">💰</div>
                     <h4>Recupera tu inversión rápido</h4>
                     <p>Con oportunidades reales que te ayudan a ver resultados</p>
                 </div>
-                <div class="why-item">
+                <div class="why-bubble">
                     <div class="why-icon">😴</div>
                     <h4>Duerme tranquilo</h4>
                     <p>Inversiones seguras y emocionantes que te dan paz mental</p>
@@ -196,7 +204,7 @@
         <div class="container">
             <h2 class="section-title">Lo que Dicen Nuestros Miembros</h2>
             <div class="testimonials-grid">
-                <div class="testimonial-card">
+                <div class="testimonial-bubble">
                     <div class="testimonial-content">
                         <p>"Gracias a Finanzas CAM, mis finanzas están ordenadas y ya vi ganancias en mis picks. El acompañamiento es increíble."</p>
                     </div>
@@ -208,7 +216,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="testimonial-card">
+                <div class="testimonial-bubble">
                     <div class="testimonial-content">
                         <p>"Las plantillas me cambiaron la vida. Ahora sé exactamente dónde está mi dinero y hacia dónde va. Vale cada peso."</p>
                     </div>
@@ -220,7 +228,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="testimonial-card">
+                <div class="testimonial-bubble">
                     <div class="testimonial-content">
                         <p>"Finalmente encontré un lugar donde me explican todo sin complicaciones. Me siento confiado invirtiendo."</p>
                     </div>
@@ -241,7 +249,7 @@
         <div class="container">
             <h2 class="section-title">Preguntas Frecuentes</h2>
             <div class="faq-list">
-                <div class="faq-item">
+                <div class="faq-bubble">
                     <button class="faq-question">
                         <span>¿Es para principiantes?</span>
                         <span class="faq-icon">+</span>
@@ -250,7 +258,7 @@
                         <p>Sí, te guiamos desde cero. No necesitas experiencia previa. Te explicamos todo paso a paso para que te sientas seguro.</p>
                     </div>
                 </div>
-                <div class="faq-item">
+                <div class="faq-bubble">
                     <button class="faq-question">
                         <span>¿Cómo pago?</span>
                         <span class="faq-icon">+</span>
@@ -259,7 +267,7 @@
                         <p>Fácil, en USD o pesos vía transferencia bancaria. Te enviamos los datos después de tu llamada de diagnóstico.</p>
                     </div>
                 </div>
-                <div class="faq-item">
+                <div class="faq-bubble">
                     <button class="faq-question">
                         <span>¿Hay garantía?</span>
                         <span class="faq-icon">+</span>
@@ -268,7 +276,7 @@
                         <p>Sí, 30 días de devolución total si no estás satisfecho. Queremos que estés 100% cómodo con tu decisión.</p>
                     </div>
                 </div>
-                <div class="faq-item">
+                <div class="faq-bubble">
                     <button class="faq-question">
                         <span>¿Qué pasa si no sé nada de inversiones?</span>
                         <span class="faq-icon">+</span>
@@ -277,7 +285,7 @@
                         <p>Perfecto, ese es nuestro público. Te enseñamos desde lo básico hasta estrategias avanzadas, todo en lenguaje sencillo.</p>
                     </div>
                 </div>
-                <div class="faq-item">
+                <div class="faq-bubble">
                     <button class="faq-question">
                         <span>¿Cuánto tiempo toma ver resultados?</span>
                         <span class="faq-icon">+</span>
@@ -292,12 +300,14 @@
 
     <!-- CTA Final -->
     <section id="contacto" class="cta-section">
-        <div class="cta-overlay"></div>
         <div class="container">
-            <div class="cta-content">
+            <div class="cta-bubble">
                 <h2 class="cta-title">Únete a nuestro club y transforma tus finanzas</h2>
                 <p class="cta-subtitle">Plazas limitadas – no te quedes fuera</p>
-                <a href="https://calendly.com/finanzascam-news/30min" target="_blank" class="btn-primary btn-large">Agenda tu llamada gratuita ahora</a>
+                <a href="https://calendly.com/finanzascam-news/30min" target="_blank" class="btn-calendly-large">
+                    <span class="btn-icon">📅</span>
+                    <span>Agenda tu llamada gratuita ahora</span>
+                </a>
             </div>
         </div>
     </section>
@@ -311,7 +321,6 @@
                 </div>
                 <div class="footer-contact">
                     <p><a href="mailto:finanzascam.vault@gmail.com">finanzascam.vault@gmail.com</a></p>
-                    <!-- ⚠️ REEMPLAZA CON TU NÚMERO DE WHATSAPP (formato: 521234567890) -->
                     <p><a href="https://wa.me/521234567890" target="_blank">WhatsApp</a></p>
                 </div>
             </div>
@@ -324,4 +333,3 @@
     <script src="script.js"></script>
 </body>
 </html>
-
